objects/SBQQ__ConfigurationRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__ConfigurationRuleHelp</customHelpPage>
    <description>Links product-scoped Product Rules to specific bundle to validate correct configuration.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule should be used in validating configurations.</description>
        <inlineHelpText>Indicates whether this rule should be used in validating configurations.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductRule__c</fullName>
        <description>The actual rule that defines logic used to validate product configuration.</description>
        <inlineHelpText>Select the product rule that has the logic you want used to validate product configurations.</inlineHelpText>
        <label>Product Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__ProductRule__c.SBQQ__Scope__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Configured product to be validated by this rule.</description>
        <inlineHelpText>Select the configured product you want this rule to validate.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleEvaluationEvent__c</fullName>
        <description>Evaluation event of referenced rule. Convenience field to avoid querying related rule record.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__EvaluationEvent__c)</formula>
        <inlineHelpText>Evaluation event of referenced rule.</inlineHelpText>
        <label>Rule Evaluation Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleType__c</fullName>
        <description>Type of referenced rule. Convenience field to avoid querying related rule record.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__Type__c)</formula>
        <inlineHelpText>Type of product rule referenced by this configuration rule.</inlineHelpText>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <label>Configuration Rule</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>